<resources>

    <string name="app_name">MobiledevProject</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="maps">Maps</string>
    <string name="rankedmaps">Ranked Maps</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="scoresaber">ScoreSaber</string>
    <string name="username">User</string>
    <string name="pp">pp</string>
    <string name="scoresabersignin">Sign in</string>
    <string name="sing_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="rank">Rank</string>
    <string name="topScore">Top Songs</string>
    <string name="recentScore">Recent Songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>